added action and method to form

--- a/add-observation.html
+++ b/add-observation.html
@@ -59,7 +59,7 @@
       <section class="ObservationDetails">
         <h2>Observation Details</h2>
         <p><span class="requiredField">*</span>Required field</p>
-        <form>
+        <form action= "https://formspree.io/f/meqvowlq" method="POST">
           <fieldset>
             <legend><strong>Observation</strong></legend>
             <label for="SpeciesGuess">Species Guess</label><span class="requiredField">*</span>
